# malcolm

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  malcolm.yaml  pyproject.toml
docs/: architecture.md  configuration.md  scenarios.md
examples/malcolm-transform-example/: README.md  pyproject.toml
examples/malcolm-transform-example/src/malcolm_transform_example/: __init__.py
examples/malcolm-transform-example/tests/: test_header_logger.py
src/malcolm/: app.py  cli.py  config.py  formats.py  ghostkey.py  models.py  proxy.py  storage.py  transforms.py  translate.py  tui.py  viewer.py
src/malcolm/templates/: detail.html  logs.html
src/malcolm/transforms/: README.md  __init__.py  _base.py
src/malcolm/transforms/ghostkey/: __init__.py  engine.py
src/malcolm/transforms/llm_annotator/: __init__.py
src/malcolm/transforms/translation/: __init__.py  engine.py
tests/: test_app.py  test_cli.py  test_config.py  test_formats.py  test_ghostkey.py  test_llm_annotator.py  test_models.py  test_proxy.py  test_storage.py  test_transforms.py  test_translate.py  test_tui.py  test_viewer.py
