[project]
name = "malcolm-transform-example"
version = "0.1.0"
description = "Example external transform for Malcolm demonstrating entry point discovery"
requires-python = ">=3.12"
dependencies = []

[project.entry-points."malcolm.transforms"]
header_logger = "malcolm_transform_example:create"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/malcolm_transform_example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
